syntax = "proto3";
package proto;
option go_package = "/proto";


message ScannerServiceControl {
    enum ServiceState {
        UNKNOWN = 0;
        START = 1;
        STARTED = 2;
        STOP = 3;
        STOPPED = 4;
    }
    ServiceState state = 1;
}


message ServerResponse{
    bool success = 1;
    string key = 2;
    ScannerResponse value = 3;
    string error = 4;
}

// Server ScannerService
service Worker {
    rpc ServiceControl(ScannerServiceControl) returns (ScannerServiceControl);
}

